--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "รายงานผู้เช่า",
-  "short_name": "TenantApp",
-  "start_url": "./index.html",
+  "name": "ระบบเช็คชื่อพนักงาน",
+  "short_name": "เช็คชื่อ",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#67bb05",
+  "background_color": "#ffffff",
   "theme_color": "#67bb05",
   "icons": [
     {
-      "src": "192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
